apis/cat/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    konghq.com/protocol: https
    konghq.com/path: "/v1"
  name: proxy-to-catapi
spec:
  ports:
  - protocol: TCP
    port: 443
    name: https
  type: ExternalName
  externalName: api.thecatapi.com
