apis/cat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catapi
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
    konghq.com/preserve-host: "false"
spec:
  rules:
  - http:
      paths:
      - path: /cat
        backend:
          serviceName: proxy-to-catapi
          servicePort: 443
